@@ -2,6 +2,7 @@
 - gh-76 Implemented OrientDB client (lvca)
 - gh-88 YCSB client for Amazon DynamoDB (jananin)
 - gh-89 Patch for YCSB Cassandra Client version 1.0.6 (jananin)
+- gh-93 New ElasticSearch Database Implementation (saden1)
 
 0.1.4 - 2/22/12 
 
